Added link for open-sourced

--- a/index.html
+++ b/index.html
@@ -107,5 +107,8 @@
       </div>
     </div>
     <script src="src/index.js"></script>
+    <a href="https://github.com/Irena-N/My-weather-app"
+      >Open-sourced by Irena Naneva</a
+    >
   </body>
 </html>
