--- a/index.html
+++ b/index.html
@@ -107,8 +107,10 @@
       </div>
     </div>
     <script src="src/index.js"></script>
-    <a href="https://github.com/Irena-N/My-weather-app"
-      >Open-sourced by Irena Naneva</a
-    >
+    <small>
+      <a href="https://github.com/Irena-N/My-weather-app" target="_blank"
+        >Open-sourced code</a
+      >by Irena Naneva
+    </small>
   </body>
 </html>
