Added relevant icon from the API

--- a/index.html
+++ b/index.html
@@ -50,7 +50,16 @@
                   <a href="#" id="fahrenheit-link">°F</a>
                 </span> -->
               </h2>
-              <span class="icon-one">⛅️</span>
+              <div class="current-weather">
+                <!-- <span class="icon-one">⛅️</span> -->
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/3222/3222675.png"
+                  alt=""
+                  class="float-left"
+                  width="130"
+                  id="icon"
+                />
+              </div>
               <h3>HI/LOW</h3>
             </div>
             <div class="col-6 center">
@@ -109,7 +118,7 @@
     <script src="src/index.js"></script>
     <small>
       <a href="https://github.com/Irena-N/My-weather-app" target="_blank"
-        >Open-sourced code </a
+        >Open-sourced code</a
       >by Irena Naneva
     </small>
   </body>
