Link for background image

--- a/index.html
+++ b/index.html
@@ -129,5 +129,12 @@
         >Open-sourced code</a
       >by Irena Naneva
     </small>
+     <small class="raindrops-image">
+      <a
+        href="https://www.freepik.com/free-photo/water-drops-glass_1150906.htm#query=weather%20background&position=18&from_view=keyword"
+        > Image by jigsawstocker</a
+      >
+      on Freepik</small
+    >
   </body>
 </html>
